--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,6 +1,21 @@
+name: CI/CD Pipeline
+
+on:
+  pull_request:
+    branches:
+      - '**'
+  push:
+    branches:
+      - main
+
 jobs:
   terraform-lint:
-    ...
+    if: github.event_name == 'pull_request'
+    name: Terraform Init and Fmt
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: terraform
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -24,7 +39,12 @@ jobs:
         run: terraform fmt -check -recursive
 
   build-and-deploy:
-    ...
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    name: Terraform Apply on Merge to Main
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: terraform
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
