--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -36,7 +36,7 @@ jobs:
         run: terraform init
 
       - name: Terraform Format
-        run: terraform fmt -check -recursive
+        run: terraform fmt -recursive
 
   build-and-deploy:
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
